--- a/templates/scanner/searchseperate.html
+++ b/templates/scanner/searchseperate.html
@@ -11,12 +11,13 @@ Search by culture
 
           </div>-->
         <div class="carousel-container">
-            <form class="form" method='post' action="{% url 'home' %}">
+            <form class="form" method='post' action="{% url 'scanner:search' %}">
+              {% csrf_token %}
                 <h2 class="animated fadeInDown mr-2">Type in a nationality!</h2>
                 <div class="form-group form-inline mb-2">
 
                 <input type="text" name="culture" class="form-control animated fadeInDown mr-2" id="culture" value="" size="50">
-                 <a href="{% url 'scanner:search' %}"><button type="submit" class="btn btn-outline-light">Search</button></a>
+                <button type="submit" class="btn btn-outline-light">Search</button></a>
                 </div>
             </form>
         </div>
